# alles

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  alles-flashing.md  alles.maxpat  alles.py  alles.send.maxpat  alles_4mb_partitions.csv  alles_partitions.csv  alles_util.py  amy.py  amy_headers.py  deb_menu.mid  dir_drums.py  dx7_simulator.py  flash.sh  fm.py  getting-started.ipynb  getting-started.md  kyle_mcdonald.py  make_lut.py  make_lutsets.py  partials.py  remote.sh  sdkconfig  sdkconfig.old  speaker-assembly.md  tones.py
alles-flasher/: Main.py  build-on-mac.spec  build.sh
amy/: Makefile  README.md  partials.py
analysis/: 2021_04_29_blosca_simulation.py
docker/: Dockerfile  Makefile  README.md
dweb2023/: dweb2023.ipynb
main/: CMakeLists.txt  Makefile  algorithms.c  alles.c  alles.h  alles_desktop.c  alles_esp32.c  amy_config.h  blemidi.c  blemidi.h  blipbridge.cc  buttons.c  bytebeat.c  bytebeat.cc  dx7bridge.cc  dx7bridge.h  envelope.c  exprtk.hpp  filters.c  fm.cc  impulse10_1024.h  impulse128_1024.h  impulse32_1024.h  impulse32_256.h  impulse_lutset.h  ip5306.c  ip5306.h  make_clipping_lut.py  master_i2c.c  master_i2c.h  midi.c  multicast.c  multicast_desktop.c  multicast_esp32.c  oscillators.c  oscillators.cc  patches.h  pcm.h  power.c  power.h  (+13 more)
main/amy/: README.md  algorithms.c  amy.c  amy.h  clipping_lookup_table.h  envelope.c  filters.c  fm.h  oscillators.c  partials.c  partials.h  patches.h  pcm.c  pcm.h  pyamy.c  setup.py  virtualmidi.mm
main/blinkinlabs/: blinkinlabs.c  blinkinlabs.h  master_i2c.c
main/blip/: Blip_Buffer.cpp  Blip_Buffer.h
main/dx7/: dx7note.cc  dx7note.h  env.cc  exp2.cc  exp2.h  fir.h  fm_core.h  freqlut.cc  freqlut.h  lfo.cc  lfo.h  log2.cc  log2.h  main.cc  module.h  patch.cc  patch.h  resofilter.h  ringbuffer.cc  sawtooth.cc  sawtooth.h  setup.py  synth.h  synth_unit.cc
pcbs/: 2020-11-23_Alles_RevA BOM.xlsx  2020-11-23_Alles_RevA.step  (+22 more)
(+29 files in other folders)
